@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.834 2003/03/14 00:32:35 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.835 2003/03/14 11:21:23 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-03-14 14:10 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * include/thread.h
+  * source/vm/thread.c
+  * source/vm/garbage.c
+    ! Compilation with fence under windows is fixed (still have to implement
+      it though), and added some optimizations for linux. 
 
 2003-03-14 12:20 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * include/thread.h
